# qi-v2-dp

./: .env.example  .gitignore  .zshrc  CLAUDE.md  README-addition.md  README.md  V0_2_0_RELEASE_SUMMARY.md  biome.json  exec_code  package-lock.json  package.json  readme.devcontainer.md  todo.md  tsconfig.json  vitest.config.integration.sequential.ts  vitest.config.integration.ts  vitest.config.integration.v1.ts  vitest.config.system.ts  vitest.config.ts  vitest.config.unit.ts
services/ai/llm-service/: .coverage  .coveragerc  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.cpu.yml  docker-compose.download.yml  docker-compose.gpu.yml  docker-compose.yml  download_model.py  impl.status.md  pyproject.toml  pytest.ini  requirements.txt
services/ai/llm-service/cache/: manager.py
services/ai/llm-service/config/: settings.py
services/ai/llm-service/docker/: Dockerfile  Dockerfile.base  Dockerfile.downloader  Dockerfile.test  docker-compose.cpu.yml  docker-compose.download.yml  docker-compose.gpu.yml  docker-compose.test.yml  docker-compose.yml
services/ai/llm-service/docs/: TESTING.md  all.md  guide.system.md  impl.plan.deployment.test.md  impl.plan.md  impl.plan.status.1.md  impl.plan.status.2.md  llm.fine_tuning.overview.md
services/ai/llm-service/downloader/: __init__.py  hf.py
services/ai/llm-service/requirements/: base.txt  cpu.txt  dev.txt  torch.txt
services/ai/llm-service/scripts/: build.sh  clean_cache.sh  cleanup.sh  download_model.py  monitor_download.sh
services/ai/llm-service/tests/: test_download.py  test_download_model.py  (+1 more)
(+1375 files in other folders)
